--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-leap-day
 
-description: "Complexity-Guided Container Replacement Synthesis"
+description: "Report of Synthesis"
